syntax = "proto3";

option java_package = "domain.event.pending.protocol";
option java_outer_classname = "pendingEventMessage";
option java_multiple_files = true;

package pending_event_message;

service ExpiredPendingEventService {
  rpc ReportExpiredPendingEvent(ExpiredPendingEvent)
      returns (ReportPendingEventResponse);
}

message ExpiredPendingEvent {
  string topic = 1;
  int64 count = 2;
  map<string, uint64> options = 3;
}

message ReportPendingEventResponse {
  bool success = 1;
  string message = 2;
}